update strings-de for Magisk Manager 3.1

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,22 +2,45 @@
     <!--Universal-->
 
     <!--Welcome Activity-->
-    <string name="navigation_drawer_open">Navigationsleiste öffnen</string>
-    <string name="navigation_drawer_close">Navigationsleiste schließen</string>
+    <string name="navigation_drawer_open">Navigationsmenü öffnen</string>
+    <string name="navigation_drawer_close">Navigationsmenü schließen</string>
+    <string name="magiskhide">Magisk Hide</string>
     <string name="modules">Module</string>
     <string name="downloads">Downloads</string>
     <string name="log">Log</string>
     <string name="settings">Einstellungen</string>
+    <string name="status">Status</string>
+    <string name="install">Installieren</string>
 
-    <!--Magisk Fragment-->
+    <!--Status Fragment-->
     <string name="magisk_version">Magisk v%1$s installiert</string>
-    <string name="magisk_version_error">Haben Sie Magisk installiert?</string>
+    <string name="magisk_version_error">Magisk ist nicht installiert</string>
 
-    <string name="magisk_update_available">Magisk v%1$.1f update!</string>
-    <string name="cannot_check_updates">Kann nicht auf Aktualisierungen prüfen</string>
-    <string name="up_to_date">Aktuellste Version von %1$s installiert</string>
+    <string name="checking_for_updates">Prüfe nach Updates…</string>
+    <string name="magisk_update_available">Magisk v%1$.1f verfügbar!</string>
+    <string name="cannot_check_updates">Updatesuche fehlgeschlagen, kein Internet verfügbar?</string>
+    <string name="up_to_date">Neuste Version von %1$s ist installiert</string>
+    <string name="root_error">Ge-rooted aber keine root-Rechte, root-Zugriff verweigert?</string>
+    <string name="not_rooted">Nicht ge-rooted</string>
+    <string name="proper_root">Sachgemäß ge-rooted</string>
+    <string name="safetyNet_check_text">SafetyNet-Status abfragen</string>
+    <string name="checking_safetyNet_status">Prüfe SafetyNet-Status…</string>
+    <string name="safetyNet_connection_failed">Verbindung zur Google-API fehlgeschlagen</string>
+    <string name="safetyNet_connection_suspended">Verbindung zur Google-API wurde ausgesetzt</string>
+    <string name="safetyNet_error">SafetyNet konnte nicht geprüft werden, kein Internet verfügbar?</string>
+    <string name="safetyNet_fail">SafetyNet fehlgeschlagen: \"CTS profile mismatch\"</string>
+    <string name="safetyNet_pass">SafetyNet bestanden</string>
+    <string name="root_info_warning">Funktionalität stark eingeschränkt</string>
 
-    <!--Root Fragment-->
+    <!--Install Fragment-->
+    <string name="auto_detect">"(autom.) %1$s"</string>
+    <string name="boot_image_title">Boot-Image-Pfad</string>
+    <string name="detect_button">Erkennen</string>
+    <string name="advanced_settings_title">Erweiterte Einstellungen</string>
+    <string name="keep_force_encryption">\"force encryption\" beibehalten</string>
+    <string name="keep_dm_verity">\"dm-verity\" beibehalten</string>
+    <string name="current_magisk_title">Installierte Magisk-Version: v%1$s</string>
+    <string name="install_magisk_title">Neuste Magisk-Version: v%1$.1f</string>
 
     <!--Module Fragment-->
     <string name="no_info_provided">(Nichts angegeben)</string>
@@ -28,78 +51,89 @@
     <string name="disable_file_created">Modul wird beim nächsten Neustart deaktiviert</string>
     <string name="disable_file_removed">Modul wird beim nächsten Neustart aktiviert</string>
     <string name="author">Erstellt von %1$s</string>
+    <string name="fab_flash_zip">Modul-Zip flashen</string>
 
     <!--Repo Fragment-->
-    <string name="update_available">Aktualisierung verfügbar</string>
+    <string name="update_available">Update verfügbar</string>
     <string name="installed">Installiert</string>
-    <string name="not_installed">Nicht Installiert</string>
-    <string name="changelog">Changelog</string>
+    <string name="not_installed">Nicht installiert</string>
+    <string name="changelog">Änderungen</string>
 
     <!--Log Fragment-->
-    <string name="menuSaveToSd">Auf SD Karte speichern</string>
+    <string name="menuSaveToSd">Auf SD-Karte speichern</string>
     <string name="menuSend">Senden</string>
-    <string name="menuReload">erneut laden</string>
-    <string name="menuClearLog">Log jetzt löschen</string>
+    <string name="menuReload">Neu laden</string>
+    <string name="menuClearLog">Log löschen</string>
     <string name="logs_cleared">Log erfolgreich gelöscht</string>
     <string name="log_is_empty">Log ist leer</string>
-    <string name="logs_save_failed">Konnte Log nicht auf SD Karte speichern:</string>
+    <string name="logs_save_failed">Konnte Log nicht auf SD-Karte speichern:</string>
 
     <!--About Activity-->
     <string name="about">Über</string>
-    <string name="app_developers">Entwickler</string>
+    <string name="app_developers">Hauptentwickler</string>
     <string name="app_developers_"><![CDATA[Anwendung entwickelt von <a href="https://github.com/topjohnwu">topjohnwu</a> in Zusammenarbeit mit <a href="https://github.com/d8ahazard">Digitalhigh</a> und <a href="https://github.com/dvdandroid">Dvdandroid</a>.]]></string>
-    <string name="app_changelog">Anwendungs changelog</string>
-    <string name="translators">skalnet</string>
-    <string name="app_version">Anwendungs Version</string>
+    <string name="app_changelog">Änderungen</string>
+    <string name="translators">skalnet, c727</string>
+    <string name="app_version">Version</string>
     <string name="app_source_code">Quelltext</string>
     <string name="donation">Spende</string>
-    <string name="app_translators">Anwendungs Übersetzer</string>
-    <string name="support_thread">Support thread</string>
+    <string name="app_translators">Übersetzer</string>
+    <string name="support_thread">Hilfeforum</string>
 
     <!--Toasts, Dialogs-->
-    <string name="permissionNotGranted">Diese Funktion wird ohne erlaubnis auf den externen Speicher zu schreiben nicht funktionieren.</string>
-    <string name="no_thanks">Nein Danke</string>
+    <string name="permissionNotGranted">Diese Funktion benötigt die Berechtigung zum Schreiben auf den externen Speicher.</string>
+    <string name="no_thanks">Nein danke</string>
     <string name="repo_install_title">Installiere %1$s</string>
-    <string name="repo_install_msg">Wollen Sie %1$s installieren?</string>
-    <string name="download_install">Herunterladen und Installieren</string>
-    <string name="download_file_error">Fehler beim Herunterladen</string>
-    <string name="install_error">Fehler beim Installieren!</string>
-    <string name="manual_install_1">Fehler beim Flashen. Datei in %1$s abgelegt\n Bitte in recovery manuell flashen</string>
-    <string name="invalid_zip">Diese Datei ist kein Magisk Modul!!</string>
-    <string name="reboot_title">Installation erfolgreich!</string>
-    <string name="reboot_msg">Wollen Sie jetzt neu starten?</string>
+    <string name="repo_install_msg">Möchtest Du %1$s installieren?</string>
+    <string name="download_install">Herunterladen &amp; installieren</string>
+    <string name="goto_install">Zu \"Installieren\" wechseln</string>
+    <string name="download_file_error">Fehler beim Herunterladen der Datei</string>
+    <string name="install_error">Fehler bei der Installation!</string>
+    <string name="manual_install_1">Zip-Datei unter %1$s gespeichert</string>
+    <string name="manual_install_2">Manuell im Recovery flashen</string>
+    <string name="invalid_zip">Die Zip-Datei ist kein Magisk-Modul!!</string>
+    <string name="reboot_title">Installation erforlgreich!</string>
+    <string name="reboot_msg">Möchtest Du jetzt neustarten?</string>
     <string name="reboot">Neustart</string>
+    <string name="copying_msg">Kopiere Zip ins temp-Verzeichnis</string>
     <string name="zip_install_progress_title">Installiere</string>
+    <string name="zip_install_unzip_zip_msg">Entpacke Zip-Datei …</string>
+    <string name="zip_install_process_zip_msg">Verarbeite Zip-Datei …</string>
     <string name="zip_install_progress_msg">"Installiere %1$s …"</string>
-    <string name="no_magisk_title">Kein Magisk Installiert!</string>
-    <string name="no_magisk_msg">Wollen Sie Magisk herunterladen und installieren?</string>
+    <string name="no_magisk_title">Magisk nicht installiert!</string>
+    <string name="no_magisk_msg">Möchtest Du Magisk herunterladen und installieren?</string>
+    <string name="downloading_toast">Herunterladen von %1$s</string>
+    <string name="magisk_update_title">Neues Magisk-Update verfügbar!</string>
+    <string name="magisk_update_message">Magisk-Update v%1$.1f ist verfügbar, möchtest Du es installieren?</string>
+    <string name="settings_reboot_toast">Neustarten, um Änderungen zu übernehmen</string>
+    <string name="check_release_notes">Änderungen anzeigen</string>
+    <string name="repo_cache_cleared">Repo-Cache gelöscht</string>
 
     <!--URL Templates-->
 
-    <!--Settings Fragment -->
+    <!--Settings Activity -->
     <string name="settings_general_category">Allgemein</string>
-    <string name="settings_theme_title">Aussehen</string>
-    <string name="settings_theme_summary">Wähle ein Theme aus</string>
+    <string name="settings_theme_title">Thema</string>
+    <string name="settings_theme_summary">Wähle ein Thema</string>
     <string name="theme_default">Standard</string>
     <string name="theme_dark">Dunkel</string>
+    <string name="settings_clear_cache_title">Repo-Cache löschen</string>
+    <string name="settings_clear_cache_summary">Löscht die gespeicherten Informtionen der Online-Repos, erzwingt eine Aktualisierung</string>
 
+    <string name="settings_magiskhide_title">Magisk Hide aktivieren</string>
+    <string name="settings_magiskhide_summary">Versteckt Magisk vor diversen Erkennungsmechanismen</string>
     <string name="settings_busybox_title">BusyBox aktivieren</string>
-    <string name="settings_busybox_summary">Magisks eingebautes BusyBox zum PATH hinzufügen</string>
+    <string name="settings_busybox_summary">Magisk\'s integriertes BusyBox nach xbin mounten</string>
+    <string name="settings_hosts_title">Systemlose hosts-Datei aktivieren</string>
+    <string name="settings_hosts_summary">Systemlose Unterstützung für Werbeblocker</string>
 
     <string name="settings_development_category">Entwicklung</string>
-    <string name="settings_developer_logging_title">Aktiviere erweitertes logging zum debuggen</string>
-    <string name="settings_developer_logging_summary">Aktivieren um ausführlichere logs zu erhalten.</string>
-    <string name="settings_shell_logging_title">Aktiviere debug logging für Shell Befehle</string>
-    <string name="settings_shell_logging_summary">Aktivieren um alle Shell Befehle und Ausgaben zu loggen.</string>
-    <string name="settings_magiskhide_title">Aktiviere Magisk Hide</string>
-    <string name="settings_magiskhide_summary">Neu starten um Einstellungen zu aktivieren</string>
+    <string name="settings_developer_logging_title">Erweiterte Fehlerprotokolle aktivieren</string>
+    <string name="settings_developer_logging_summary">Für ausführliches Logging aktivieren</string>
+    <string name="settings_shell_logging_title">Fehlerprotokolle für Shell-Befehle aktivieren</string>
+    <string name="settings_shell_logging_summary">Logging aller Shell-Befehle sowie deren Ausgabe</string>
 
-    <!-- Strings related to Settings -->
+    <!-- Themes -->
 
-    <!-- Example General settings -->
-
-    <!-- Example settings for Data & Sync -->
-
-    <!-- Example settings for Notifications -->
 
 </resources>
