--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -138,7 +138,7 @@
     <!--Superuser-->
     <string name="su_request_title">Superuser-Anfrage</string>
     <string name="deny">Gewähren</string>
-    <string name="grant">Verweigern</string>
+    <string name="grant">Verweigern%1$s</string>
     <string name="su_warning">Gewährt vollen Zugriff auf das Gerät.\nVerweigere, wenn du dir unsicher bist!</string>
     <string name="forever">Dauerhaft</string>
     <string name="once">Nur diesmal</string>
